{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 216,
  "lineage": "529653db-e859-1a31-78fd-3e8a8e18393e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "custom-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:593698965881:loadbalancer/custom-elb",
            "availability_zones": [
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "custom-elb-553754135.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "custom-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0b8801e0191f1f1fa",
              "i-0c34af364d0de4fd8"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:iam::593698965881:server-certificate/todo-certificate"
              }
            ],
            "name": "custom-elb",
            "security_groups": [
              "sg-018bb2af575ddfabc"
            ],
            "source_security_group": "593698965881/custom-elb-sg",
            "source_security_group_id": "sg-018bb2af575ddfabc",
            "subnets": [
              "subnet-006255ae4d07ae14f",
              "subnet-0ea9cfa0d09214cc1"
            ],
            "tags": {
              "Name": "custom-elb"
            },
            "tags_all": {
              "Name": "custom-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_server_certificate.test_cert",
            "aws_security_group.custom-elb-sg",
            "aws_subnet.customvpc-public-1",
            "aws_subnet.customvpc-public-2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:593698965881:instance/i-0cb7f3b5b4215ccae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb7f3b5b4215ccae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c5f55089193d744",
            "private_dns": "ip-172-31-17-160.ec2.internal",
            "private_ip": "172.31.17.160",
            "public_dns": "ec2-54-91-111-11.compute-1.amazonaws.com",
            "public_ip": "54.91.111.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0456b7014816c74ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ad474ce0",
            "tags": {
              "Name": "MogoDB"
            },
            "tags_all": {
              "Name": "MogoDB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-cd9a44ca"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customvpc-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593698965881:internet-gateway/igw-087f9ba23a706c275",
            "id": "igw-087f9ba23a706c275",
            "owner_id": "593698965881",
            "tags": {
              "Name": "customvpc-ig"
            },
            "tags_all": {
              "Name": "customvpc-ig"
            },
            "vpc_id": "vpc-0181e8f13ba5ac74f"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customvpc-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593698965881:route-table/rtb-03acaae65c96a7d98",
            "id": "rtb-03acaae65c96a7d98",
            "owner_id": "593698965881",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087f9ba23a706c275",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customvpc-r"
            },
            "tags_all": {
              "Name": "customvpc-r"
            },
            "vpc_id": "vpc-0181e8f13ba5ac74f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.customvpc-ig",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customvpc-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037ae03756a3cf304",
            "route_table_id": "rtb-03acaae65c96a7d98",
            "subnet_id": "subnet-006255ae4d07ae14f"
          },
          "dependencies": [
            "aws_route_table.customvpc-r",
            "aws_subnet.customvpc-public-1",
            "aws_vpc.custom-vpc",
            "aws_internet_gateway.customvpc-ig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customvpc-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0de37e41c6fbea7",
            "route_table_id": "rtb-03acaae65c96a7d98",
            "subnet_id": "subnet-0ea9cfa0d09214cc1"
          },
          "dependencies": [
            "aws_vpc.custom-vpc",
            "aws_internet_gateway.customvpc-ig",
            "aws_route_table.customvpc-r",
            "aws_subnet.customvpc-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593698965881:security-group/sg-018bb2af575ddfabc",
            "description": "security group for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018bb2af575ddfabc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "custom-elb-sg",
            "name_prefix": "",
            "owner_id": "593698965881",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "custom-elb-sg"
            },
            "tags_all": {
              "Name": "custom-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0181e8f13ba5ac74f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593698965881:security-group/sg-017d26a896f9ccb71",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017d26a896f9ccb71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ssh from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018bb2af575ddfabc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "custom-instance-sg",
            "name_prefix": "",
            "owner_id": "593698965881",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "custom-instance-sg"
            },
            "tags_all": {
              "Name": "custom-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0181e8f13ba5ac74f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.custom-elb-sg",
            "aws_vpc.custom-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http-connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1272796059",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-cd9a44ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "port-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "open tcp test",
            "from_port": 3000,
            "id": "sgrule-83416671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017d26a896f9ccb71",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.custom-instance-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-4097257684",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-cd9a44ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customvpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593698965881:subnet/subnet-006255ae4d07ae14f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-006255ae4d07ae14f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "593698965881",
            "tags": {
              "Name": "customvpc-public-1"
            },
            "tags_all": {
              "Name": "customvpc-public-1"
            },
            "vpc_id": "vpc-0181e8f13ba5ac74f"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customvpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593698965881:subnet/subnet-0ea9cfa0d09214cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ea9cfa0d09214cc1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "593698965881",
            "tags": {
              "Name": "customvpc-public-2"
            },
            "tags_all": {
              "Name": "customvpc-public-2"
            },
            "vpc_id": "vpc-0181e8f13ba5ac74f"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593698965881:vpc/vpc-0181e8f13ba5ac74f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0723ef5c43ab37578",
            "default_route_table_id": "rtb-074b38832ee5c1107",
            "default_security_group_id": "sg-09c111fb7d17cdb4b",
            "dhcp_options_id": "dopt-1752636d",
            "enable_classiclink": true,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0181e8f13ba5ac74f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074b38832ee5c1107",
            "owner_id": "593698965881",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}